--- a/bujumbura-easier.html
+++ b/bujumbura-easier.html
@@ -7,33 +7,41 @@
 </head>
 
 <body>
-  <!-- Retrieved data will be dumped here -->
-  <div class="city"></div>
-  <div class="wind"></div>
-  <div class="humidity"></div>
-  <div class="temp"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript">
-    // This is our API key. Add your own API key between the ""
-    var APIKey = "";
-
-    // Here we are building the URL we need to query the database
-    var queryURL = "https://api.openweathermap.org/data/2.5/weather?q=Bujumbura,Burundi&appid=" + APIKey;
-
-    // We then created an AJAX call
-    $.ajax({
-      url: queryURL,
-      method: "GET"
-    }).then(function(response) {
-
-      // Create CODE HERE to Log the queryURL
-      // Create CODE HERE to log the resulting object
-      // Create CODE HERE to transfer content to HTML
-      // Create CODE HERE to calculate the temperature (converted from Kelvin)
-      // Hint: To convert from Kelvin to Fahrenheit: F = (K - 273.15) * 1.80 + 32
-      // Create CODE HERE to dump the temperature content into HTML
-
-    });
+    <!-- Retrieved data will be dumped here -->
+    <div class="city"></div>
+    <div class="wind"></div>
+    <div class="humidity"></div>
+    <div class="temp"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript">
+      // This is our API key. Add your own API key between the ""
+      var APIKey = "d143658721c859ab49074de335008164";
+  
+      // Here we are building the URL we need to query the database
+      var queryURL = "https://api.openweathermap.org/data/2.5/weather?q=Bujumbura,Burundi&appid=" + APIKey;
+  
+      // We then created an AJAX call
+      $.ajax({
+        url: queryURL,
+        method: "GET"
+      }).then(function (response) {
+  
+        // Create CODE HERE to Log the queryURL
+        console.log(queryURL);
+  
+        // Create CODE HERE to log the resulting object
+        console.log(response)
+  
+        // Create CODE HERE to transfer content to HTML
+        $('.city').text(response.name);
+        $('.wind').text(response.wind.speed);
+        $('.humidity').text(response.main.humidity);
+        // Create CODE HERE to calculate the temperature (converted from Kelvin)
+        const tempF = (response.main.temp - 273.15) * 1.80 + 32;
+        // Hint: To convert from Kelvin to Fahrenheit: F = (K - 273.15) * 1.80 + 32
+        // Create CODE HERE to dump the temperature content into HTML
+        $('.temp').text(tempF);
+      });
   </script>
 </body>
 
